helm/argo-cd/gw.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: unsecure-global-incoming-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway   # ชี้ไปที่ istio-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
