helm/argo-cd/vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd
  namespace: argocd
spec:
  hosts:
    - argocd.assguard.internal
  gateways:
    - istio-system/global-incoming-gateway
  http:
    - match:
        - uri:
            prefix: /argocd/
      route:
        - destination:
            host: argocd-server.argocd.svc.cluster.local
            port:
              number: 80
